--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.1",
+    "bulma": "^0.8.0",
+    "bulma-start": "0.0.3",
+    "firebase": "^7.6.2",
+    "html-react-parser": "^0.10.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-bulma-components": "^3.1.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
