--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-key-index": "^0.1.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
